--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   another_flushbar: ^1.12.30
   dio: ^5.3.3
   package_info_plus: ^4.2.0
+  flutter_downloader: ^1.11.4
+  permission_handler: ^11.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
