--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   permission_handler: ^11.0.1
   device_info_plus: ^9.1.0
   path_provider: ^2.1.1
+  go_router: ^13.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
