--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   device_info_plus: ^9.1.0
   path_provider: ^2.1.1
   go_router: ^13.2.0
+  menu_bar: ^0.5.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
