--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,26 +10,26 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.5
-  window_manager: ^0.3.5
-  get: ^4.6.5
-  flutter_hooks: ^0.20.3
-  google_fonts: ^6.1.0
-  flutter_svg: ^1.1.6
-  intl: ^0.18.1
-  another_flushbar: ^1.12.30
-  dio: ^5.3.3
-  package_info_plus: ^4.2.0
-  flutter_downloader: ^1.11.4
-  permission_handler: ^11.0.1
-  device_info_plus: ^9.1.0
-  path_provider: ^2.1.1
-  go_router: ^13.2.0
-  menu_bar: ^0.5.3
+  cupertino_icons: 1.0.5
+  window_manager: 0.3.5
+  get: 4.6.5
+  flutter_hooks: 0.20.3
+  google_fonts: 6.1.0
+  flutter_svg: 1.1.6
+  intl: 0.18.1
+  another_flushbar: 1.12.30
+  dio: 5.3.3
+  package_info_plus: 4.2.0
+  flutter_downloader: 1.11.4
+  permission_handler: 11.0.1
+  device_info_plus: 9.1.0
+  path_provider: 2.1.1
+  go_router: 13.2.0
+  menu_bar: 0.5.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: 2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
