--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   path_provider: 2.1.1
   go_router: 13.2.0
   menu_bar: 0.5.3
+  path: ^1.8.3
+  isar: ^3.1.0+1
+  file_selector: ^1.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
